# Tapeworm

./: CMakeLists.txt  readme.md
include/: aggregate_to_tuple.hpp  concepts.hpp  meta.hpp  priority_concept.hpp  ranges.hpp  serialization.hpp  static_visit.hpp  tuple_like.hpp
tests/: concepts.cpp
